feat(Search): added api requests to find stations